--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br><br>
       </div>
 
-        <input class="navigate search" type="text" id="searchbar" name="searchbar" placeholder="Search...">
+        <input class="inp-sea-ani search" type="text" id="searchbar" name="searchbar" placeholder="Search...">
         <br><br>
     </nav>
   </div>
@@ -67,30 +67,30 @@
             <hr><br>
               <form>
                 <label for="fname">First Name</label>
-                <input class="form" type="text" id="fname" name="fname" placeholder="First Name">
+                <input class="form inp-sea-ani" type="text" id="fname" name="fname" placeholder="First Name">
               <br><br>
 
                 <label for="lname">Last Name</label>
-                <input class="form" type="text" id="lname" name="lname" placeholder="Last Name">
+                <input class="form inp-sea-ani" type="text" id="lname" name="lname" placeholder="Last Name">
               <br><br>
 
                 <label for="email">E-Mail</label>
-                <input class="form" type="email" id="email" name="email" placeholder="JaneDoe@Surreal.com">
+                <input class="form inp-sea-ani" type="email" id="email" name="email" placeholder="JaneDoe@Surreal.com">
               <br><br>
 
                 <label for="tel">Phone Number</label>
-                <input class="form" type="tel" id="tel" name="tel" placeholder="555-555-5555">
+                <input class="form inp-sea-ani" type="tel" id="tel" name="tel" placeholder="555-555-5555">
               <br><br>
 
                 <p>What is your perferred method of contact?</p>
-                <input class="form" type="radio" id="phone" name="contact" value="phone">
+                <input class="form inp-sea-ani" type="radio" id="phone" name="contact" value="phone">
                 <label for="contact">Phone</label>
 
-                <input class="form" type="radio" id="E-mail" name="contact" value="E-mail">
+                <input class="form inp-sea-ani" type="radio" id="E-mail" name="contact" value="E-mail">
                 <label for="contact">E-mail</label>
                 <br><br>
 
-                <input class="form" type="submit" value="Register">
+                <input class="form inp-sea-ani" type="submit" value="Register">
               </form>
           <h4>You are on your way to having the perfect graphic for you or your business!</h4>
           <br><br>
