--- a/index.html
+++ b/index.html
@@ -100,8 +100,15 @@
           <br><br>
         <h2>About the Creator</h2>
         <br>
-
+          
+        <div class="card">
           <img class="me" src="/assets/me.jpg" alt="An image of me.">
+          <div class="card-body">
+            <h5 class="card-title">Me</h5>
+            <p class="card-text">The owner and founder of Surreal Designs.</p>
+            <a href="#" class="btn btn-primary">Read more (Biography link)</a>
+          </div>
+        </div>
           <br>
         
           <h3 class="inline">Aarion Weeks</h3><p class="inline-emphasis">, A.A in Arts, Essex County College</p>
