--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/original.css">
   
   <title>Surreal Designs</title>
 </head>
@@ -19,11 +18,11 @@
   <div class="nav">
     <nav>
       <div class="grow">
-        <a href="">Home  | </a>
-        <a href="">Book a Consultation  |  </a>
-        <a href="">Portfolio  |  </a>
-        <a href="">Reviews  |  </a>
-        <a href="">About Us</a>
+        <a href="index.html">Home  | </a>
+        <a href="consultation.html">Book a Consultation  |  </a>
+        <a href="portfolios.html">Portfolio  |  </a>
+        <a href="reviews.html">Reviews  |  </a>
+        <a href="about_us.html">About Us</a>
         
         <br><br>
       </div>
