Added meta to additional pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Consultation, E-mail, Phone, Purpose, Portfolio, blog">
+  <meta name="keywords" content="graphics, graphic desgin, Consultation, buy, sell, elaborate, customer service, E-mail, Phone, Purpose, Portfolio, blog">
+  <meta name="description" content="Surreal Designs is a hub for creators and clients looking to buy and sell elaborate designs.."
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
@@ -97,32 +98,6 @@
               <br>
           <h4>You are on your way to having the perfect graphic for you or your business!</h4>
           <br><br>
-        <h2>About the Creator</h2>
-        <br>
-          
-        <div class="card">
-          <img class="me" src="/assets/me.jpg" alt="An image of me.">
-          <div class="card-body">
-            <h5 class="card-title">Me</h5>
-            <p class="card-text">The owner and founder of Surreal Designs.</p>
-            <a href="#" class="btn btn-primary">Read more (Biography link)</a>
-          </div>
-        </div>
-          <br>
-        
-          <h3 class="inline">Aarion Weeks</h3><p class="inline-emphasis">, A.A in Arts, Essex County College</p>
-
-          <p class="quote">"I have created this website as a hub for clients to find graphic artists with a focus on the customer and quality of work."</p>
-          <br>
-
-          <blog>  
-            <p>Learning to develope in a class enviornment as opposed to online and by myself has been fufilling.
-            Instead of learning various tags and methods of developing with no real direction, in a class evviornment I learn from
-            people more experienced in the field. I learn specific information that will be useful to  companies
-            and make me more valueable as an employee. It's helpful that I've took some time out to complete
-            classes by myself because I haven't really struggled with any of my assignments. I feel I have become
-            a better developer in the past few weeks from taking courses as opposed to learning on my own.</p>
-          </blog>
 
           <h3 class="underline">Resources and Where to Find Me</h3>
 
