--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="graphics, graphic desgin, Consultation, buy, sell, elaborate, customer service, E-mail, Phone, Purpose, Portfolio, blog">
-  <meta name="description" content="Surreal Designs is a hub for creators and clients looking to buy and sell elaborate designs.."
+  <meta name="description" content="Surreal Designs is a hub for creators and clients looking to buy and sell elaborate designs..">
   
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
   
   <title>Surreal Designs</title>
@@ -30,7 +30,10 @@
 
         <input class="grow search" type="text" id="searchbar" name="searchbar" placeholder="Search...">
         <br><br>
+        <button type="button" class="btn btn-outline-secondary" onclick="darkModeSwitch()">Toggle Light/Dark Mode</button>
+        <br><br>
     </nav>
+    
   </div>
     <br><br>
   
@@ -126,6 +129,7 @@
 
     </footer>
   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="/javascript/script.js"></script>
   </body>
 </html>
