Linked darkmode javascript file on all pages.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="maintext">
         <p><b>Surreal Designs</b> ensures your graphic stands out in its uniqueness and creatively conveys your message to 
           the intended audience. Because of our focus on customer service, we ensure our designs are the images 
-          they struggled to create, successfully converted into beautiful graphics.
+          they struggled to translate from their minds, successfully translated into beautiful graphics.
         <br><br>
           <p>On this site you will find helpful information on tools. You'll be able to book a consultation, 
             look at the portfolios of graphic artists, contact customer service and more. We have a dedicated page
