--- a/consultation.html
+++ b/consultation.html
@@ -21,7 +21,6 @@
               <a href="index.html">Home  | </a>
               <a href="consultation.html">Book a Consultation  |  </a>
               <a href="portfolios.html">Portfolio  |  </a>
-              <a href="reviews.html">Reviews  |  </a>
               <a href="about_us.html">About Us</a>
               
               <br><br>
@@ -37,6 +36,42 @@
   <main>
     <p class="subh"><b>Book Us</b></p>
     <br>
+    <p>Feel free to book a consultation right below this paragraph
+      on this page. We'll take some basic information from you now and contact you at a time you're
+      available and in the method you'd prefer. We'd much rather you look around first.</p>
+      <br> 
+      
+      <p>Please input your information here to be contacted for a free consultation!</p>
+      <hr><br>
+        <form>
+          <label for="fname">First Name</label>
+          <input class="form grow" type="text" id="fname" name="fname" placeholder="First Name">
+        <br><br>
+
+          <label for="lname">Last Name</label>
+          <input class="form grow" type="text" id="lname" name="lname" placeholder="Last Name">
+        <br><br>
+
+          <label for="email">E-Mail</label>
+          <input class="form grow" type="email" id="email" name="email" placeholder="JaneDoe@Surreal.com">
+        <br><br>
+
+          <label for="tel">Phone Number</label>
+          <input class="form grow" type="tel" id="tel" name="tel" placeholder="555-555-5555">
+        <br><br>
+
+          <p>What is your perferred method of contact?</p>
+          <input class="form grow" type="radio" id="phone" name="contact" value="phone">
+          <label for="contact">Phone</label>
+
+          <input class="form grow" type="radio" id="E-mail" name="contact" value="E-mail">
+          <label for="contact">E-mail</label>
+          <br><br>
+
+          <input class="form grow" type="submit" value="Register">
+        </form>
+        <br>
+    <h4>You are on your way to having the perfect graphic for you or your business!</h4>
   </main>
         </div>
           <br><br>
