Changed units of measurements, adjusted footer.

--- a/about_us.html
+++ b/about_us.html
@@ -17,7 +17,7 @@
         
         <div class="nav">
           <nav>
-            <div class="grow">
+            <div class="grow" id="navigation">
               <a href="index.html">Home  | </a>
               <a href="consultation.html">Book a Consultation  |  </a>
               <a href="portfolios.html">Portfolio  |  </a>
@@ -55,7 +55,7 @@
 
             <p class="quote">"I have created this website as a hub for clients to find graphic artists with a focus on the customer and quality of work." -Aarion Weeks, Founder of Surreal Designs</p>
             <br>
-            <h3 class="underline">Resources and Where to Find Me</h3>
+            <h4 class="underline">Resources and Where to Find Me</h4>
 
           <ul>
             <li  class=""><a href="https://www.essex.edu/" target="_blank">My Ala Mater</a></li>
