--- a/consultation.html
+++ b/consultation.html
@@ -17,7 +17,7 @@
         
         <div class="nav">
           <nav>
-            <div class="grow">
+            <div class="grow" id="navigation">
               <a href="index.html">Home  | </a>
               <a href="consultation.html">Book a Consultation  |  </a>
               <a href="portfolios.html">Portfolio  |  </a>
@@ -41,7 +41,7 @@
       available and in the method you'd prefer. We'd much rather you look around first.</p>
       <br> 
       
-      <p>Please input your information here to be contacted for a free consultation!</p>
+      <p>Please input your information here to be contacted for a free consultation.</p>
       <hr><br>
         <form>
           <label for="fname">First Name</label>
