--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
 
 
     <footer>
-          <div class="footerp">
+          <div class="footer">
+            <div class="footerp">
             <h4>Thank you for choosing Surreal Designs</h4>
               <p class="underline">Contact Us : </p>
               <p>Phone: 555-555-5555</p>
               <p>E-mail: notreal@surreal.com</p>
+            </div>
           </div>
 
     </footer>
