Updated with know-it-all

--- a/portfolios.html
+++ b/portfolios.html
@@ -47,10 +47,9 @@
 
           <div class="card item left">
             <img img src="/assets/fadein.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Fade-in Project</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#">Link to Github</a>
+            <div class="card-body">Know-It-All Quiz</h5>
+              <p class="card-text">A fun quiz to test a user's knowledge on various subjects.</p>
+              <a href="#">Github</a>
             </div>
           </div>
     
