--- a/portfolios.html
+++ b/portfolios.html
@@ -46,7 +46,7 @@
           </div>
 
           <div class="card item left">
-            <img img src="/assets/fadein.png" class="card-img-top" alt="...">
+            <img img src="/assets/know-it-all.png" class="card-img-top" alt="...">
             <div class="card-body">Know-It-All Quiz</h5>
               <p class="card-text">A fun quiz to test a user's knowledge on various subjects.</p>
               <a href="#">Github</a>
