--- a/portfolios.html
+++ b/portfolios.html
@@ -49,7 +49,7 @@
             <img img src="/assets/know-it-all.png" class="card-img-top" alt="...">
             <div class="card-body">Know-It-All Quiz</h5>
               <p class="card-text">A fun quiz to test a user's knowledge on various subjects.</p>
-              <a href="#">Github</a>
+              <a href="https://github.com/Aarion12/know-it-all" target="_blank">Github</a>
             </div>
           </div>
     
