--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Surreal Designs is a hub for creators and clients looking to buy and sell elaborate designs..">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   
   <title>Surreal Designs</title>
 </head>
@@ -46,10 +46,10 @@
         <h3 class="slogan">Our purpose is simple. To translate the idea in your mind into the image you want, your way.</h3>
       <br><br>
         <div class="grid">
-            <div><img src="/assets/busg.jpg" alt="A rainbow graphic." class="grid-img grow"></div>
-            <div><img src="/assets/deer.jpg" alt="A deer graphic." class="grid-img grow"></div>
-            <div><img src="/assets/face.jpg" alt="A face graphic." class="grid-img grow"></div>
-            <div><img src="/assets/koi.png" alt="A koi fish graphic." class="grid-img grow"></div>
+            <div><img src="./assets/busg.jpg" alt="A rainbow graphic." class="grid-img grow"></div>
+            <div><img src="./assets/deer.jpg" alt="A deer graphic." class="grid-img grow"></div>
+            <div><img src="./assets/face.jpg" alt="A face graphic." class="grid-img grow"></div>
+            <div><img src="./assets/koi.png" alt="A koi fish graphic." class="grid-img grow"></div>
           </div>
         <br><br><br>
       
@@ -86,6 +86,6 @@
     </footer>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="/javascript/script.js"></script>
+    <script src="./javascript/script.js"></script>
   </body>
 </html>
