--- a/about_us.html
+++ b/about_us.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="graphic designers, graphics, graphic design, art">
         <meta name="description" content="Read all about our graphic designers and the designs they have for sale. Exchange information and collaborate today.">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         
         <title>Surreal Designs</title>
       </head>
@@ -51,7 +51,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
           <div class="accordion-body">
              
-            <img src="/assets/me.jpg" alt="An image of Aarion Weeks" class="me">
+            <img src="./assets/me.jpg" alt="An image of Aarion Weeks" class="me">
 
             <p class="quote">"I have created this website as a hub for clients to find graphic artists with a focus on the customer and quality of work." -Aarion Weeks, Founder of Surreal Designs</p>
             <br>
@@ -76,7 +76,7 @@
         </div>
           <br><br>
         </header>
-        <script src="/javascript/script.js"></script>
+        <script src="./javascript/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
       </body>
 </html>
