--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 
 		<title>Surreal Designs</title>
 	</head>
@@ -73,28 +73,28 @@
 			<div class="grid">
 				<div>
 					<img
-						src="/assets/busg.jpg"
+						src="./assets/busg.jpg"
 						alt="A rainbow graphic."
 						class="grid-img grow"
 					/>
 				</div>
 				<div>
 					<img
-						src="/assets/deer.jpg"
+						src="./assets/deer.jpg"
 						alt="A deer graphic."
 						class="grid-img grow"
 					/>
 				</div>
 				<div>
 					<img
-						src="/assets/face.jpg"
+						src="./assets/face.jpg"
 						alt="A face graphic."
 						class="grid-img grow"
 					/>
 				</div>
 				<div>
 					<img
-						src="/assets/koi.png"
+						src="./assets/koi.png"
 						alt="A koi fish graphic."
 						class="grid-img grow"
 					/>
@@ -142,6 +142,6 @@
 			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 			crossorigin="anonymous"
 		></script>
-		<script src="/javascript/script.js"></script>
+		<script src="./javascript/script.js"></script>
 	</body>
 </html>
