--- a/reviews.html
+++ b/reviews.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="Consultation, E-mail, Phone, Purpose, Portfolio, blog">
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         
         <title>Surreal Designs</title>
       </head>
@@ -41,6 +41,6 @@
   </main>
         </div>
           <br><br>
-      <script src="/javascript/script.js"></script>
+      <script src="./javascript/script.js"></script>
     </body>
 </html>
